(executable
 (public_name minishell_execvp)
 (name minishell_execvp)
 (package code)
 (libraries unix)
 (modules minishell_execvp))

(executable
 (public_name minishell)
 (name minishell)
 (package code)
 (libraries unix format)
 (modules minishell parser command io))
 (libraries unix)
 (modules minishell parser command))
